--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -44,12 +44,12 @@
     "jotai": "^2.12.1",
     "lucide-react": "^0.436.0",
     "moment": "^2.30.1",
-    "next": "^15.2.3",
+    "next": "16.0.7",
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
-    "react": "18.2.0",
+    "react": "19.0.1",
     "react-day-picker": "^9.6.2",
-    "react-dom": "18.2.0",
+    "react-dom": "19.0.1",
     "react-hook-form": "^7.53.2",
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.0",
@@ -63,12 +63,12 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "20.10.6",
-    "@types/react": "18.2.46",
-    "@types/react-dom": "18.2.18",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1",
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/ui": "^4.0.10",
     "eslint": "^9.39.1",
-    "eslint-config-next": "^16.0.3",
+    "eslint-config-next": "16.0.7",
     "jsdom": "^27.2.0",
     "postcss": "8.4.33",
     "supabase": "^1.207.9",
@@ -78,5 +78,9 @@
     "typescript": "5.3.3",
     "vitest": "^4.0.10"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "resolutions": {
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-primitive": "^2.0.1"
+  }
 }
